--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -1,9 +1,17 @@
 #works {
+  .background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--color-three);
+    z-index: -9999;
+  }
+  
   .page {
     display: flex;
     background: var(--color-three-o);
     z-index: -1;
-    // flex-direction: column;
+    // margin-top: 50px;
   }
   
   .go-to-contact-container {
@@ -88,13 +96,19 @@
               transform: skew(15deg);
             }
           }
-  
+          
           .gh {
             opacity: 1 !important;
+            width: initial;
+            padding: 10px 20px;
+            overflow: visible;
           }
           
           .view {
             opacity: 1 !important;
+            width: initial;
+            padding: 10px 20px;
+            overflow: visible;
           }
         }
       }
@@ -120,7 +134,6 @@
     font-size: 400%;
     cursor: default;
     z-index: 1;
-    // border: 1px solid red;
 
     &:hover {
       
@@ -212,43 +225,42 @@
       z-index: 1;
       text-align: center;
       margin-top: -40px;
-      margin-top: 20px;
-      // border: 1px solid red;
       line-height: 0;
       
       .button {
         display: inline-block;
-        opacity: 1;
+        opacity: 0;
         margin-top: 0;
         font-size: 30%;
         background: var(--color-two-title);
-        padding: 10px 20px;
         color: var(--color-four-title);
         cursor: pointer;
         line-height: initial;
-        border: 1px solid red;
       }
       
       .toggle {
         left: 10%;
-        position: absolute;
-        z-index: 3;
+        padding: 10px 20px;
       }
       
       .gh {
         position: absolute;
         top: 0;
         left: 0;
-        opacity: 1 !important;
-        z-index: 2;
+        z-index: -1;
+        width: 0;
+        padding: 0;
+        overflow: hidden;
       }
       
       .view {
         position: absolute;
         top: 0;
         right: 0;
-        opacity: 1 !important;
-        z-index: 1;
+        z-index: -1;
+        width: 0;
+        padding: 0;
+        overflow: hidden;
       }
     }
   }
