--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -4,14 +4,14 @@
     width: 100%;
     height: 100%;
     background: var(--color-three);
-    z-index: -9999;
+    z-index: -99999;
   }
   
   .page {
     display: flex;
     background: var(--color-three-o);
     z-index: -1;
-    // margin-top: 50px;
+    margin-top: 50px;
   }
   
   .go-to-contact-container {
