--- a/src/components/pages/styles/about.scss
+++ b/src/components/pages/styles/about.scss
@@ -1,5 +1,9 @@
 #about {
 
+  .background-layer {
+    background: var(--color-two);
+  }
+
   .header {
     font-size: 400%;
     text-align: center;
