--- a/src/components/pages/styles/home.scss
+++ b/src/components/pages/styles/home.scss
@@ -1,6 +1,10 @@
 #home {
   --go-to-contact-width: 60px;
 
+  .background-layer {
+    background: var(--color-one);
+  }
+
   .go-to-contact-container {
     position: absolute;
     width: var(--go-to-contact-width);
