--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -1,17 +1,20 @@
 #works {
-  .background {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: var(--color-three);
-    z-index: -99999;
+  .background-layer {
+    background: var(--color-one);
+    color: var(--color-two);
+    font-size: 300%;
+    padding-left: 75%;
   }
   
   .page {
     display: flex;
-    background: var(--color-three-o);
+    background: var(--color-three);
     z-index: -1;
-    margin-top: 50px;
+    transition: 0.6s;
+    
+    &.pull-down {
+      margin-top: 50px;
+    }
   }
   
   .go-to-contact-container {
@@ -46,11 +49,23 @@
   
   .go-to-about-container {
     position: absolute;
-    top: 3%;
-    left: 47%;
+    width: 50px;
+    height: 70px;
+    top: 0;
+    right: 26%;
     cursor: pointer;
     font-size: 200%;
     z-index: 3;
+    background: var(--color-two);
+    border: 3px solid var(--color-three-title);
+    border-top-color: transparent;
+    border-bottom-left-radius: 999px;
+    border-bottom-right-radius: 999px;
+    transition: 0.6s;
+    
+    &:hover {
+      height: 110px;
+    }
   }
 
   .a-work-is-active {
