--- a/src/components/pages/styles/about.scss
+++ b/src/components/pages/styles/about.scss
@@ -2,6 +2,27 @@
 
   .background-layer {
     background: var(--color-two);
+    display: flex;
+    align-items: flex-end;
+    padding-left: 75%;
+    font-size: 300%;
+    color: var(--color-four-title);
+
+    span {
+      font-family: 'Courier New', Courier, monospace;
+      margin: {
+        left: 8px;
+      }
+    }
+  }
+
+  .page {
+    background: var(--color-four);
+    margin-top: -55px;
+    
+    &.pull-up {
+      margin-top: -55px;
+    }
   }
 
   .header {
@@ -20,9 +41,22 @@
 
   .go-to-works-container {
     position: absolute;
-    bottom: 4%;
-    left: 45%;
+    width: 50px;
+    height: 70px;
+    bottom: 0;
+    right: 26%;
     cursor: pointer;
     font-size: 200%;
+    z-index: 3;
+    background: var(--color-one);
+    border: 3px solid var(--color-one-title);
+    border-bottom-color: transparent;
+    border-top-left-radius: 999px;
+    border-top-right-radius: 999px;
+    transition: 0.6s;
+    
+    &:hover {
+      height: 110px;
+    }
   }
 }
