--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -105,6 +105,12 @@
           margin-left: -60%;
         }
 
+        .work-description {
+          margin-top: 20px;
+          margin-left: -50%;
+          opacity: 1;
+        }
+
         .buttons-panel {
           margin-top: 20px;
 
@@ -183,7 +189,7 @@
       }
       
       .work-description {
-        margin-top: 15px;
+        margin-top: 20px;
         opacity: 1;
       }
       
@@ -214,11 +220,16 @@
         transform: skew(15deg);
         background: var(--color-three-o);
       }
+
+      .work-description {
+        color: var(--color-four);
+      }
       
       .buttons-panel {
         
         .button {
           background: var(--color-three-title);
+          color: var(--color-two);
         }
       }
     }
@@ -249,6 +260,7 @@
       opacity: 0;
       z-index: 1;
       margin-top: -30px;
+      color: var(--color-two);
     }
 
     .buttons-panel {
