--- a/src/components/pages/styles/contact.scss
+++ b/src/components/pages/styles/contact.scss
@@ -233,7 +233,7 @@
       &:hover {
 
         .input-side-rect {
-          background: var(--color-four);  
+          background: var(--color-two-title);
         }
       }
     }
