--- a/src/components/pages/styles/about.scss
+++ b/src/components/pages/styles/about.scss
@@ -21,17 +21,26 @@
     top: 0;
     left: 0;
     height: 100vh;
+    overflow: hidden;
     
     path {
       fill: green;
       cursor: pointer;
-      transform: translate(-150px,0);
-      // z-index: 99999;
+      d: path("M 0 0 Q 65 300 0 600");
+
+      &:hover {
+        d: path("M 0 0 Q 130 300 0 600");
+      }
+    }
+
+    text {
+      transform: translate(0,280px) rotateZ(90deg);
     }
   }
 
   .page {
     background: var(--color-four);
+    transition: 0.6s;
     
     &.pull-up {
       margin-top: -55px;
@@ -67,7 +76,7 @@
     border-bottom-color: transparent;
     border-top-left-radius: 999px;
     border-top-right-radius: 999px;
-    transition: 0.6s;
+    transition: 0.3s;
     
     &:hover {
       height: 110px;
