--- a/src/components/pages/styles/home.scss
+++ b/src/components/pages/styles/home.scss
@@ -87,11 +87,38 @@
   }
   
   .go-to-about-container {
-    position: absolute;
-    right: -3%;
-    top: 48%;
-    cursor: pointer;
-    font-size: 200%;
-    transform: rotateZ(-90deg)
+    svg {
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100vh;
+      border: 1px solid red;
+      transform: rotateY(180deg);
+      display: flex;
+      
+      &:hover {
+        
+        path {
+          d: path("M 0 0 Q 130 300 0 600");
+        }
+
+        text {
+          transform: translate(21px,50vh) rotateZ(90deg) rotateY(180deg);
+          font-size: 200%;
+        }
+      }
+      
+      path {
+        fill: green;
+        cursor: pointer;
+        d: path("M 0 0 Q 65 300 0 600");
+      }
+
+      text {
+        transform: translate(10px,48vh) rotateZ(90deg) rotateY(180deg);
+        font-size: 140%;
+        cursor: default;
+      }
+    }
   }
 }
