--- a/src/components/pages/styles/home.scss
+++ b/src/components/pages/styles/home.scss
@@ -12,7 +12,7 @@
     left: calc((100vw - var(--go-to-contact-width)) / 2);
     bottom: 20px;
     background: var(--color-one-title);
-    color: var(--color-one);
+    color: var(--color-four-title);
     border: 1px solid var(--color-one-title);
     border-radius: 19px;
     cursor: pointer;
@@ -60,7 +60,7 @@
       }
       
       .line-one {
-        transform: rotateZ(135deg) translateX(6px) translateY(-32px);
+        transform: rotateZ(135deg) translateX(7px) translateY(-35px);
       }
       
       .line-two {
@@ -69,8 +69,7 @@
       }
       
       .line-three {
-        transform: rotateZ(45deg) translateX(45px) translateY(-7px);
-        
+        transform: rotateZ(45deg) translateX(46px) translateY(-5px);
       }
     }
     
@@ -92,7 +91,6 @@
       top: 0;
       right: 0;
       height: 100vh;
-      border: 1px solid red;
       transform: rotateY(180deg);
       display: flex;
       
@@ -117,7 +115,7 @@
       text {
         transform: translate(10px,48vh) rotateZ(90deg) rotateY(180deg);
         font-size: 140%;
-        cursor: default;
+        cursor: pointer;
       }
     }
   }
