--- a/src/components/pages/styles/about.scss
+++ b/src/components/pages/styles/about.scss
@@ -17,7 +17,7 @@
   }
 
   .page {
-    background: var(--color-four);
+    background: var(--color-two);
     transition: 0.6s;
     
     &.pull-up {
