--- a/src/components/pages/styles/about.scss
+++ b/src/components/pages/styles/about.scss
@@ -1,12 +1,12 @@
 #about {
 
   .background-layer {
-    background: var(--color-two);
+    background: var(--color-four);
     display: flex;
     align-items: flex-end;
     padding-left: 75%;
     font-size: 300%;
-    color: var(--color-four-title);
+    color: var(--color-one-title);
 
     span {
       font-family: 'Courier New', Courier, monospace;
@@ -17,6 +17,7 @@
   }
 
   .page {
+    position: relative;
     background: var(--color-two);
     transition: 0.6s;
     
@@ -24,7 +25,52 @@
       margin-top: -55px;
     }
   }
-
+  
+  .back-sheet {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    border: 10px solid var(--color-four-title);
+    border-color: transparent;
+  }
+  
+  .content {
+    position: absolute;
+    width: 70%;
+    height: 70%;
+    top: 15%;
+    left: 15%;
+    border: 10px solid var(--color-three-title);
+    // border-color: transparent;
+    border-radius: 20px;
+    background: var(--color-two);
+    overflow: hidden;
+    
+    .content-sheet {
+      position: absolute;
+      width: 45%;
+      height: 90%;
+      top: 5%;
+      left: 2.5%;
+      border: 10px solid var(--color-one-title);
+      border-radius: 20px;
+      background: var(--color-one);
+    }
+    
+    .front-sheet {
+      position: absolute;
+      width: 45%;
+      height: 90%;
+      top: 5%;
+      left: 52.5%;
+      border: 10px solid var(--color-three-title);
+      border-radius: 20px;
+      background: var(--color-one);
+    }
+  }
+  
   .header {
     font-size: 400%;
     text-align: center;
