--- a/src/components/pages/styles/about.scss
+++ b/src/components/pages/styles/about.scss
@@ -32,7 +32,7 @@
     height: 100vh;
     border: 10px solid red;
     background: transparent;
-    // border-width: 0px !important;
+    border-width: 0px !important;
     // z-index: 9999;
 
     .line-1 {
