--- a/src/components/pages/styles/home.scss
+++ b/src/components/pages/styles/home.scss
@@ -1,5 +1,7 @@
 #home {
   --go-to-contact-width: 60px;
+  --mouse-x: 0;
+  --mouse-y: 0;
 
   .background-layer {
     background: var(--color-one);
