--- a/src/components/pages/styles/home.scss
+++ b/src/components/pages/styles/home.scss
@@ -1,12 +1,45 @@
 #home {
   --go-to-contact-width: 60px;
-  --mouse-x: 0;
-  --mouse-y: 0;
+  --circle-width: 400px;
+  --mouse-x: 0px;
+  --mouse-y: 0px;
 
   .background-layer {
     background: var(--color-one);
   }
 
+  .page {
+    cursor: none;
+    // cursor: default;
+  }
+
+  .circle {
+    position: absolute;
+    width: var(--circle-width);
+    height: var(--circle-width);
+    top: calc(var(--mouse-y) - (var(--circle-width) / 2));
+    left: calc(var(--mouse-x) - (var(--circle-width) / 2));
+    transition: 0s;
+    // border: 5px solid red;
+    background: transparent;
+    border-radius: 9999px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url('http://dummyimage.com/800x400/933');
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+
+    .dot {
+      width: 0;
+      height: 0;
+      border: 5px solid black;
+      border-radius: 9999px;
+      opacity: 0;
+    }
+  }
+  
   .go-to-contact-container {
     position: absolute;
     width: var(--go-to-contact-width);
