--- a/src/components/pages/styles/about.scss
+++ b/src/components/pages/styles/about.scss
@@ -1,7 +1,7 @@
 #about {
 
   .background-layer {
-    background: var(--color-four);
+    background: var(--color-two);
     display: flex;
     align-items: flex-end;
     padding-left: 75%;
@@ -32,32 +32,6 @@
     height: 100vh;
     border: 10px solid red;
     background: transparent;
-    border-width: 0px !important;
-    // z-index: 9999;
-
-    .line-1 {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 60px;
-      height: 60vh;
-      background: darkgoldenrod;
-      transform: skew(45deg);
-      transform-origin: top left;
-      opacity: 0.4;
-    }
-
-    .line-2 {
-      position: absolute;
-      top: 60vh;
-      left: 30.5vw;
-      width: 60px;
-      height: 40vh;
-      background: darkgoldenrod;
-      transform: skew(-45deg);
-      transform-origin: top left;
-      opacity: 0.4;
-    }
   }
   
   .back-sheet {
@@ -67,7 +41,6 @@
     top: 0;
     left: 0;
     border: 0px solid var(--color-four-title);
-    // border-color: transparent;
     
     .shapes-container {
       top: 0;
@@ -86,7 +59,6 @@
     border: 10px solid var(--color-three-title);
     border-radius: 20px;
     background: transparent;
-    // overflow: hidden;
     
     .content-sheet {
       position: absolute;
@@ -97,7 +69,6 @@
       border: 10px solid var(--color-one-title);
       border-radius: 20px;
       background: var(--color-one);
-      // overflow: hidden;
       
       .shapes-container {
         top: -37%;
@@ -118,7 +89,6 @@
       border: 10px solid var(--color-three-title);
       border-radius: 20px;
       background: var(--color-one);
-      // overflow: hidden;
       
       .shapes-container {
         top: -37%;
