--- a/src/components/pages/styles/home.scss
+++ b/src/components/pages/styles/home.scss
@@ -34,8 +34,8 @@
     top: calc(var(--mouse-y) - (var(--circle-width) / 2));
     left: calc(var(--mouse-x) - (var(--circle-width) / 2));
     transition: 0s;
-    border: 2px solid var(--color-two);
-    border: 2px solid #666;
+    // border: 2px solid var(--color-two);
+    // border: 2px solid #666;
     background: transparent;
     border-radius: 9999px;
     display: flex;
