--- a/src/components/pages/styles/about.scss
+++ b/src/components/pages/styles/about.scss
@@ -46,13 +46,6 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
-    
-    .shapes-container {
-      top: 0;
-      left: 0;
-      background: skyblue;
-      background: transparent;
-    }
   }
   
   .content {
@@ -76,18 +69,7 @@
       background: var(--color-one);
       font-size: 150%;
       text-align: center;
-      padding: {
-        top: 80px;
-      }
-      
-      .shapes-container {
-        top: -37%;
-        left: -62%;
-        border-color: green;
-        border-width: 7px;
-        background: indigo;
-        background: transparent;
-      }
+      padding-top: 80px;
     }
     
     .front-sheet {
@@ -103,15 +85,6 @@
       background-attachment: fixed;
       background-repeat: no-repeat;
       background-position: center;
-      
-      .shapes-container {
-        top: -37%;
-        left: -178.5%;
-        border-color: blue;
-        border-width: 3px;
-        background: hotpink;
-        background: transparent;
-      }
     }
   }
   
