--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -80,6 +80,10 @@
         flex-grow: 1;
 
         &.reverse {
+          .background-image {
+            opacity: 0.7;
+          }
+
           .title {
             color: var(--color-three-title);
           }
@@ -184,6 +188,11 @@
         width: 100%;
       }
       
+      .background-image {
+        opacity: 0.7;
+        transition-delay: 0.3s;
+      }
+      
       .title {
         color: var(--color-two-title);
       }
@@ -246,7 +255,22 @@
       border-top-color: transparent;
       border-bottom-color: transparent;
       transform: skew(-15deg);
+      overflow: hidden;
       z-index: 0;
+    }
+    
+    .background-image {
+      position: absolute;
+      right: 0;
+      width: 100%;
+      height: 150px;
+      border: 1px solid red;
+      background-image: url('../../../screenShots/formi.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+      opacity: 0;
+      transform: skew(15deg);
     }
     
     .title {
