--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -238,13 +238,13 @@
       }
 
       .work-description {
-        color: var(--color-four);
+        color: var(--color-three-title);
       }
       
       .work-details {
 
         .work-text {
-          color: var(--color-four);
+          color: var(--color-three-title);
         }
       }
       
@@ -284,7 +284,7 @@
       opacity: 0;
       z-index: 1;
       margin-top: -30px;
-      color: var(--color-two);
+      color: var(--color-two-title);
     }
     
     .details-placeholder {
@@ -332,7 +332,7 @@
         flex-basis: 44%;
         font-size: 25%;      
         background: transparent;
-        color: var(--color-two);
+        color: var(--color-two-title);
         overflow: hidden;
         display: flex;
         align-items: center;
