--- a/src/components/pages/styles/home.scss
+++ b/src/components/pages/styles/home.scss
@@ -152,7 +152,7 @@
         }
 
         text {
-          transform: translate(21px,50vh) rotateZ(90deg) rotateY(180deg);
+          transform: translate(21px,61%) rotateZ(90deg) rotateY(180deg);
           font-size: 220%;
         }
       }
@@ -164,7 +164,7 @@
       }
       
       text {
-        transform: translate(10px,48vh) rotateZ(90deg) rotateY(180deg);
+        transform: translate(10px,60%) rotateZ(90deg) rotateY(180deg);
         font-size: 160%;
         cursor: pointer;
         fill: var(--color-four-title);
