--- a/src/components/pages/styles/contact.scss
+++ b/src/components/pages/styles/contact.scss
@@ -153,7 +153,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    
     .item-container {
       position: relative;
       width: 300px;
@@ -163,7 +163,7 @@
       border-radius: 39px;
       cursor: pointer;
       color: var(--color-three-title);
-      transform: skew(10deg);
+      transform: skew(10deg) translateX(3rem);
       
       &:hover {
         
