--- a/src/components/pages/styles/contact.scss
+++ b/src/components/pages/styles/contact.scss
@@ -190,7 +190,7 @@
         
         .text {
           transform: skew(-10deg);
-          font-weight: bolder;
+          font-weight: 500;
         }
         
         .item-desc {
