--- a/src/components/pages/styles/pages.scss
+++ b/src/components/pages/styles/pages.scss
@@ -122,7 +122,7 @@
 }
 
 .layer.is {
-  opacity: 1; 
+  opacity: 1;
 }
 
 .back-layer.is {
@@ -232,7 +232,7 @@
 }
 
 .zoom-out .background-layer {
-  transform: skew(45deg);
+  transform: skew(var(--skew-degree));
   transition: 1s;
 }
 
